--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="wrapper">
-      <header>
+      <header class="PlainHeader">
         <h1>Password Generator</h1>
       </header>
       <div class="card">
