--- a/index.html
+++ b/index.html
@@ -15,27 +15,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div class="wrapper">
-      <header class="PlainHeader">
-        <h1>Password Generator</h1>
-      </header>
-      <div class="card">
-        <div class="card-header">
-          <h2>Generate a Password</h2>
+    <!-- 2. Bootstrap Grid -->
+    <div class="container">
+
+        <!-- Row 1: Name Box (12) -->
+        <div class="row">
+            <!-- Text Box -->
+            <div class="col-sm-12">
+                <div class="NameBox">
+                    <h1>rguthrie's</h1>
+                    <h1>Password Generator</h1>
+                </div>
+            </div>
         </div>
-        <div class="card-body">
-          <textarea>
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          </textarea>
+
+        <!-- Row 2 is a spacer -->
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="spacer"> <style> .spacer {width: 100%; height: 20px;}</style> </div>
+            </div>
         </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+
+        <!-- Row 3 requests password length -->
+        <div class="row">
+            <div class="col-sm-12">
+              <div class="single-field">
+                <label for="pwdLen" class="doubleline heading">How many characters? (8-128):</label>
+                <input type="number" name="pwdLen" step="1" min="8" max="128" value="8" id="pwdLen" class="calculatorInput" required="">
+                <!-- <span class="clearElement"></span> -->
+              </div>
+            </div>
         </div>
-      </div>
+
+        <!-- Row 4, 2 columns: permissions checkboxes column and mandatory characters column -->
+        <div class="row">
+            <!-- checkboxes -->
+            <div class="col-sm-4">
+                <div class="form-check">
+                  <label class="form-check-label" for="mayUseLowerCase">
+                  <input class="form-check-input" type="checkbox" checked value="1" id="mayUseLowerCase">
+                    Password may contain Lowercase (a-z)
+                  </label>
+                </div>
+                <div class="form-check">
+                  <label class="form-check-label" for="mayUseUpperCase">
+                  <input class="form-check-input" type="checkbox" checked value="1" id="mayUseUpperCase">
+                    Password may contain Uppercase (A-Z)
+                  </label>
+                </div>
+                <div class="form-check">
+                  <label class="form-check-label" for="mayUseDigits">
+                  <input class="form-check-input" type="checkbox" checked value="1" id="mayUseDigits">
+                    Password may contain Digits (0-9)
+                  </label>
+                </div>
+                <div class="form-check">
+                  <label class="form-check-label" for="mayUseSpecials">
+                  <input class="form-check-input" type="checkbox" checked value="1" id="mayUseSpecials">
+                    Password may contain Specials (!#$, etc.)
+                  </label>
+                </div>
+            </div>
+
+            <!-- numeric dialogs -->
+            <div class="col-sm-5">
+              <div class="single-field">
+                <label for="lowersMustUse" class="doubleline heading">How many characters <em>must</em> be Lowercase?:</label>
+                <input type="number" name="pwdLen" step="1" min="0" max="128" value="0" id="lowersMustUse" class="calculatorInput" required="">
+                <span class="clearElement"></span>
+              </div>
+              <div class="single-field">
+                <label for="uppersMustUse" class="doubleline heading">How many characters <em>must</em> be Uppercase?:</label>
+                <input type="number" name="pwdLen" step="1" min="0" max="128" value="0" id="uppersMustUse" class="calculatorInput" required="">
+                <span class="clearElement"></span>
+              </div>
+              <div class="single-field">
+                <label for="digitsMustUse" class="doubleline heading">How many characters <em>must</em> be Digits?:</label>
+                <input type="number" name="pwdLen" step="1" min="0" max="128" value="0" id="digitsMustUse" class="calculatorInput" required="">
+                <span class="clearElement"></span>
+              </div>
+              <div class="single-field">
+                <label for="specialsMustUse" class="doubleline heading">How many characters <em>must</em> be Special Characters?:</label>
+                <input type="number" name="pwdLen" step="1" min="0" max="128" value="0" id="specialsMustUse" class="calculatorInput" required="">
+                <span class="clearElement"></span>
+              </div>
+            </div>
+
+            <div class="col-sm-3">
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12">
+              <div class="card">
+                <div class="card-body">
+                  <textarea 
+                    readonly 
+                    id="password" 
+                    placeholder="Your Secure Password" 
+                    aria-label="Generated Password">
+                  </textarea>
+                </div>
+                <div class="card-footer">
+                  <button id="generate" class="btn">Generate Password</button>
+                  <button id="copyBtn"  class="btn" disabled>Copy To Clipboard</button>
+                </div>
+              </div>
+            </div>  
+        </div>
     </div>
+
     <script src="assets/js/script.js"></script>
     
     <!-- Javascript support; jquery, popper, and bootstrap -->
