--- a/index.html
+++ b/index.html
@@ -15,115 +15,108 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <!-- 2. Bootstrap Grid -->
+    <!-- Bootstrap Grid -->
     <div class="container">
 
-        <!-- Row 1: Name Box (12) -->
+        <!-- Row 1 is the Name Box -->
         <div class="row">
             <!-- Text Box -->
-            <div class="col-sm-12">
+            <div class="col-sm-6">
                 <div class="NameBox">
-                    <h1>rguthrie's</h1>
-                    <h1>Password Generator</h1>
+                    <h3>rguthrie's</h3>
+                    <h2>Password Generator</h2>
                 </div>
             </div>
-        </div>
-
-        <!-- Row 2 is a spacer -->
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="spacer"> <style> .spacer {width: 100%; height: 20px;}</style> </div>
+            <div class="col-sm-6">
             </div>
         </div>
 
-        <!-- Row 3 requests password length -->
+        <!-- Row 2 requests password length -->
         <div class="row">
-            <div class="col-sm-12">
-              <div class="single-field">
-                <label for="pwdLen" class="doubleline heading">How many characters? (8-128):</label>
-                <input type="number" name="pwdLen" step="1" min="8" max="128" value="8" id="pwdLen" class="calculatorInput" required="">
-                <!-- <span class="clearElement"></span> -->
-              </div>
+            <div class="col-sm-6">
+              <label for="pwdLen" id="lenQuery">How many characters? (8-128):</label>
+              <input type="number" id="pwdLen" name="pwdLen" class="numericBox" step="1" min="8" max="128" value="8" required="">
+            </div>
+            <div class="col-sm-6">
             </div>
         </div>
 
-        <!-- Row 4, 2 columns: permissions checkboxes column and mandatory characters column -->
+        <!-- Row 3 is the header for dialogs -->
+        <div class="row">
+            <div class="col-sm-6">
+              <h6 class="dialogHeader">Composition of Password</h6>
+            </div>
+            <div class="col-sm-6">
+            </div>
+        </div>
+
+        <!-- Row 4 has character set permission checkboxes.  Each has a corresponding dialog
+        for entry of the minimum number of the character set which must be in the password. -->
         <div class="row">
             <!-- checkboxes -->
-            <div class="col-sm-4">
-                <div class="form-check">
-                  <label class="form-check-label" for="mayUseLowerCase">
-                  <input class="form-check-input" type="checkbox" checked value="1" id="mayUseLowerCase">
-                    Password may contain Lowercase (a-z)
-                  </label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label" for="mayUseUpperCase">
-                  <input class="form-check-input" type="checkbox" checked value="1" id="mayUseUpperCase">
-                    Password may contain Uppercase (A-Z)
-                  </label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label" for="mayUseDigits">
-                  <input class="form-check-input" type="checkbox" checked value="1" id="mayUseDigits">
-                    Password may contain Digits (0-9)
-                  </label>
-                </div>
-                <div class="form-check">
-                  <label class="form-check-label" for="mayUseSpecials">
-                  <input class="form-check-input" type="checkbox" checked value="1" id="mayUseSpecials">
-                    Password may contain Specials (!#$, etc.)
-                  </label>
-                </div>
+            <div class="col-sm-6">
+              <label class="form-check-label" for="mayUseLowerCase">
+              <input class="form-check-input" type="checkbox" checked value="1" id="mayUseLowerCase">
+                Use Lowercase (a-z); if checked must use at least
+              </label>                
+              <label for="lowersMustUse" class="numberBox">
+                <input type="number" name="pwdLen" step="1" min="0" max="128" value="2" id="lowersMustUse" class="numericBox" required="">
+              </label>
+
+              <label class="form-check-label" for="mayUseUpperCase">
+                <input class="form-check-input" type="checkbox" checked value="1" id="mayUseUpperCase">
+                Use Uppercase (A-Z); if checked must use at least
+              </label>
+              <label for="uppersMustUse" class="numberBox">
+                <input type="number" name="pwdLen" step="1" min="0" max="128" value="2" id="uppersMustUse" class="numericBox" required="">
+              </label>
+
+              <label class="form-check-label" for="mayUseDigits">
+                <input class="form-check-input" type="checkbox" checked value="1" id="mayUseDigits">
+                Use Digits (0-9); if checked must use at least
+              </label>
+              <label for="digitsMustUse" class="numberBox">
+                <input type="number" name="pwdLen" step="1" min="0" max="128" value="2" id="digitsMustUse" class="numericBox" required="">
+              </label>
+
+              <label class="form-check-label" for="mayUseSpecials">
+                <input class="form-check-input" type="checkbox" checked value="1" id="mayUseSpecials">
+                Use Specials (!#$, etc.); if checked must use at least
+              </label>
+              <label for="specialsMustUse" class="numberBox">
+                <input type="number" name="pwdLen" step="1" min="0" max="128" value="2" id="specialsMustUse" class="numericBox" required="">
+              </label>
             </div>
 
-            <!-- numeric dialogs -->
-            <div class="col-sm-5">
-              <div class="single-field">
-                <label for="lowersMustUse" class="doubleline heading">How many characters <em>must</em> be Lowercase?:</label>
-                <input type="number" name="pwdLen" step="1" min="0" max="128" value="0" id="lowersMustUse" class="calculatorInput" required="">
-                <span class="clearElement"></span>
-              </div>
-              <div class="single-field">
-                <label for="uppersMustUse" class="doubleline heading">How many characters <em>must</em> be Uppercase?:</label>
-                <input type="number" name="pwdLen" step="1" min="0" max="128" value="0" id="uppersMustUse" class="calculatorInput" required="">
-                <span class="clearElement"></span>
-              </div>
-              <div class="single-field">
-                <label for="digitsMustUse" class="doubleline heading">How many characters <em>must</em> be Digits?:</label>
-                <input type="number" name="pwdLen" step="1" min="0" max="128" value="0" id="digitsMustUse" class="calculatorInput" required="">
-                <span class="clearElement"></span>
-              </div>
-              <div class="single-field">
-                <label for="specialsMustUse" class="doubleline heading">How many characters <em>must</em> be Special Characters?:</label>
-                <input type="number" name="pwdLen" step="1" min="0" max="128" value="0" id="specialsMustUse" class="calculatorInput" required="">
-                <span class="clearElement"></span>
-              </div>
-            </div>
-
-            <div class="col-sm-3">
+            <div class="col-sm-6">
             </div>
 
         </div>
 
+        <!-- Row 5, two columns; first column has two sub-rows for the password area on top
+        and buttons on the bottom. -->
         <div class="row">
-            <div class="col-sm-12">
-              <div class="card">
-                <div class="card-body">
-                  <textarea 
-                    readonly 
-                    id="password" 
-                    placeholder="Your Secure Password" 
-                    aria-label="Generated Password">
-                  </textarea>
+            <!-- first column -->
+            <div class="col-sm-6">
+              <div class="row">
+                <div class="col-sm-12">
+                  <label for="password" class="passwordBox">
+                    <textarea id="password" readonly>-- Your Secure Password --</textarea>
+                  </label>  
                 </div>
-                <div class="card-footer">
-                  <button id="generate" class="btn">Generate Password</button>
-                  <button id="copyBtn"  class="btn" disabled>Copy To Clipboard</button>
+              </div>    
+              <div class="row">
+                <div class="col-sm-12">
+                    <button id="generate" class="btn">Generate Password</button>
+                    <button id="copyBtn"  class="btn" disabled>Copy To Clipboard</button>
                 </div>
               </div>
             </div>  
+
+            <div class="col-sm-6">
+            </div>
         </div>
+
     </div>
 
     <script src="assets/js/script.js"></script>
